build_output_debug.txt
> Task :clean

> Task :compileJava
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarSocialController.java:41: error: cannot find symbol
        Long currentUserId = SecurityUtils.getCurrentUserId();
                             ^
  symbol:   variable SecurityUtils
  location: class CarSocialController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\CarGeneralGraphQlController.java:42: error: cannot find symbol
                            .name(user.getFullName())
                            ^
  symbol:   method name(String)
  location: class UserSummaryBuilder
2 errors

> Task :compileJava FAILED


[Incubating] Problems report is available at: file:///D:/Startup/Car%20Frontend%20Backend/Sell-the-old-Car/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\car\CarSocialController.java:41: error: cannot find symbol
          Long currentUserId = SecurityUtils.getCurrentUserId();
                               ^
    symbol:   variable SecurityUtils
    location: class CarSocialController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\CarGeneralGraphQlController.java:42: error: cannot find symbol
                              .name(user.getFullName())
                              ^
    symbol:   method name(String)
    location: class UserSummaryBuilder
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 13s
2 actionable tasks: 2 executed
